fix: w<1024px, will overflow.

--- a/client/src/mobile.css
+++ b/client/src/mobile.css
@@ -21,25 +21,28 @@
     display: none;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1024px) {
     .sibling-switch {
         left: 114px;
         top: unset;
-        bottom: 6px;
+        bottom: 4px;
         visibility: visible;
         z-index: 2;
     }
 
+    .resubmit-edit-button {
+        display: block;
+        visibility: visible;
+    }
+}
+
+@media (max-width: 767px) {
     .nav-close-button {
         display: block;
         position: absolute;
         left: 100%;
         top: 12px;
         margin-left: 20px;
-    }
-
-    .resubmit-edit-button {
-        display: block;
     }
 
     .nav {
